Added java documentation for all classes. Few performance tweaks and fixes.